--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
       - name: ----------=====Building Application=====-------------
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
+          cd frontend
           npm install
           npm run build
 
@@ -82,11 +83,14 @@ jobs:
 
       - name: ----------=====Install Dependencies=====-------------
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install
+        run: |
+          cd backend
+          npm install
   
       - name: ----------=====Building Application=====-------------
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
+          cd backend
           npm install 
           npm run build
 
